examples/negative/06_effect_violation_demo.aeth
// Expected: `aether check` fails with E0801 effect diagnostic.
function badPurePrinter() returns Unit
  effects pure
do
  print("pure functions cannot print")
end

function main() returns Unit
  effects log
do
  badPurePrinter()
end
